--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="https://avatars.githubusercontent.com/u/116422610" class="avatar" srcset="images/littlelink.svg 2x" alt="">
+        <img src="https://avatars.githubusercontent.com/u/116422610" class="avatar" srcset="https://avatars.githubusercontent.com/u/116422610 2x" alt="">
 
         <!-- Title -->
         <h1 role="heading">Hendra Manudinata</h1>
